--- a/package.json
+++ b/package.json
@@ -14,8 +14,10 @@
     "lint": "eslint --ext .js,.vue src test/unit/specs test/e2e/specs"
   },
   "dependencies": {
+    "axios": "^0.16.2",
     "css-loader": "^0.28.5",
     "vue": "^2.4.2",
+    "vue-axios": "^2.0.2",
     "vue-router": "^2.7.0"
   },
   "devDependencies": {
