--- a/package.json
+++ b/package.json
@@ -18,7 +18,8 @@
     "css-loader": "^0.28.5",
     "vue": "^2.4.2",
     "vue-axios": "^2.0.2",
-    "vue-router": "^2.7.0"
+    "vue-router": "^2.7.0",
+    "vuex": "^2.4.0"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
