--- a/package.json
+++ b/package.json
@@ -16,9 +16,13 @@
   "dependencies": {
     "axios": "^0.16.2",
     "css-loader": "^0.28.5",
+    "element-ui": "^1.4.4",
+    "jQuery": "^1.7.4",
+    "jquery": "^3.2.1",
     "vue": "^2.4.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^2.7.0",
+    "vue-verify-plugin": "^2.0.0",
     "vuex": "^2.4.0"
   },
   "devDependencies": {
