--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "vue": "^2.4.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^2.7.0",
+    "vue-simplemde": "^0.4.4",
     "vue-verify-plugin": "^2.0.0",
     "vuex": "^2.4.0"
   },
