--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "element-ui": "^1.4.4",
     "jQuery": "^1.7.4",
     "jquery": "^3.2.1",
+    "lodash": "^4.17.4",
     "vue": "^2.4.2",
     "vue-axios": "^2.0.2",
     "vue-router": "^2.7.0",
